# Zelo

./: CMakeLists.txt
include/: AST.h  BuiltinFunctions.h  ErrorCode.h  GarbageCollector.h  Interpreter.h  Lexer.h  MacroSystem.h  ModuleSystem.h  Namespace.h  Parser.h  StandardLibrary.h  TypeSystem.h  Value.h
src/: BuiltinFunctions.cpp  GarbageCollector.cpp  Interpreter.cpp  Lexer.cpp  MacroSystem.cpp  ModuleSystem.cpp  Namespace.cpp  Parser.cpp  StandardLibrary.cpp  TypeSystem.cpp  Value.cpp  main.cpp
